# hh_db

./: README.md  main.py  pyproject.toml
src/: comp_fetcher.py  db_manager.py  logger.py  vac_fetcher.py
